--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,1 @@
-{ "rewrites": [{ "source": "/(.*)", "destination": "/" }] }
+{ "rewrites": [{ "source": "/(.*)", "destination": "core/templates/core/" }] }
