allowing that vercel uses django as framework

--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,23 @@
-{ "rewrites": [{ "source": "/(.*)", "destination": "core/templates/core/" }] }
+{
+  "version": 2,
+  "builds": [
+    {
+      "src": "receitas_ai/wsgi.py",
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "15mb",
+        "runtime": "python3.9"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/static/(.*)",
+      "dest": "static/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "receitas_ai/wsgi.py"
+    }
+  ]
+}
