--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "super_urls.py",
+      "src": "supa_url.py",
       "use": "@vercel/python"
     }
   ],
@@ -13,7 +13,8 @@
     },
     {
       "src": "/(.*)",
-      "dest": "super_urls.py" 
+      "dest": "supa_url.py" 
     }
+    
   ]
 }
