--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ pydantic_core==2.33.2
 pyparsing==3.2.3
 requests==2.32.4
 rsa==4.9.1
+setuptools==80.9.0
 sqlparse==0.5.3
 tqdm==4.67.1
 typing-inspection==0.4.1
